styles/style.css
body{
    display: flex;
    flex-direction: column;
    margin: 0px;
    background-color: black;
}

button, h1, .header-content .header-description p, footer p, .quote em, .quote strong{
    color: #fff;
    text-shadow:
        0 0 7px #0542c7,
        0 0 10px #0542c7,
        0 0 0px #0542c7;
}

.info-image, .sign-up{
    border-radius: 2rem;
    padding: 0.4em;
    box-shadow: 0 0 .2rem #fff,
                0 0 .2rem #fff,
                0 0 2rem #9005c7,
                0 0 0.8rem #9005c7,
                0 0 2.8rem #9005c7,
                inset 0 0 1.3rem #9005c7;
}

.sign-up-button, a{
    border-radius: 2rem;
    padding-left: 1em;
    padding-right: 1em;
    padding-top: 0.5em;
    padding-bottom: 0.1em;
    box-shadow: 0 0 .2rem #fff,
                0 0 .2rem #fff,
                0 0 2rem #9005c7,
                0 0 0.8rem #9005c7,
                0 0 2.8rem #9005c7;
}

p, h2, li, a{
    color: #fff;
    text-shadow:
        0 0 7px rgb(144,5,199),
        0 0 10px rgb(144,5,199),
        0 0 21px rgb(144,5,199),
        0 0 42px rgb(144,5,199),
        0 0 0px rgb(144,5,199),
        0 0 0px rgb(111, 0, 255),
        0 0 0px rgb(111, 0, 255),
        0 0 0px rgb(111, 0, 255);
}

.info-image{
    width: 300px;
    height: 300px;
}

/*Header*/

.header-image{
    width: 450px;
    height: 300px;
}

button, .header-image{
    padding: 0.4em;
    border-radius: 2rem;
    box-shadow: 0 0 .2rem #fff,
                0 0 .2rem #fff,
                0 0 2rem #0542c7,
                0 0 0.8rem #0542c7,
                0 0 2.8rem #0542c7,
                inset 0 0 1.3rem #0542c7;
}

header{
    display: flex;
    flex-direction: column;
    background-color: #181818;
    padding-bottom: 24px;
    padding-top: 0px;
    margin: 0px;
    flex: 1;
}

.navbar{
    display: flex;
    gap: 420px;
    justify-content: center;
    background-color: black;
    padding-bottom: 24px;
    padding-top: 24px;
}

h1{
    padding: 0px;
    margin: 0px;
}

a:visited, a:link, h1, .header-description p{
    color: white;
    text-decoration: none;
}

.header-content, ul{
    align-self: center;
}

button{
    color: white;
    background-color: #181818;
    padding: 8px;
    padding-left: 15px;
    padding-right: 15px;
}

ul{
    display: flex;
    list-style-type: none;
    gap: 16px;
    margin: 0px;
}

.header-content{
    display:flex;
    justify-content: space-between;
    flex: 1;
    gap: 40px;
    margin: 48px;
}

.header-description{
    width: 400px;
}

h1{
    font-size: 48px;
    font-weight: 1000px;
}

/*items content*/
.information{
    display: flex;
    justify-content: center;
    flex-direction: column;
    background-color: black;
    flex: 1;
}

h2{
    text-align: center;
    font-size: 48px;
    margin-top: 40px;
    margin-bottom: 0px;
}

.item-container{
    margin-bottom: 60px;
    margin-top: 20px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.item{
    text-align: center;
    padding: 40px;
}

.info-image{
    height: 400px;
    width: 400px;
}

.item p{
    font-size: 52px;
    font-weight: 800;
    padding: 0rem;
    font-family: 'Pinyon Script', cursive;
}

/*quote*/

.quote{
    background-color: #181818;
    font-size: 36px;
    padding: 80px;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.quote em{
    width: 50%;
    align-self: center;
}

.quote strong{
    margin-left: 0 auto;
    width: 73%;
    text-align: end;
}

/*sign-up*/
.sign-up{
    display: flex;
    background-color: black;
    border: 8px;
    color: #fff;
    text-shadow:
        0 0 7px rgb(144,5,199),
        0 0 10px rgb(144,5,199),
        0 0 21px rgb(144,5,199),
        0 0 42px rgb(144,5,199),
        0 0 82px rgb(144,5,199),
        0 0 92px rgb(111, 0, 255),
        0 0 102px rgb(111, 0, 255),
        0 0 151px rgb(111, 0, 255);
    justify-content: center;
    align-items: center;
    align-self: center;
    margin: 4rem;
    gap: 80px;
    padding: 32px;
    min-width: 400px;
    max-width: 1000px;
}

.text h3{
    padding: 0px;
    margin: 0px;
}

.text p{
    padding: 0px;
    margin: 0px;
}

.sign-up-button{
    padding: 6px;
    padding-left: 24px;
    padding-right: 24px;
    min-width: 400px;
}

/* footer */
footer{
    text-align: center;
    background-color: #181818;
}

footer p{
 padding: 20px; 
 color: white;  
}

